# ThreatSignal

./: Funding.yml  README.md
.github/workflows/: greetings.yml
threatsignal/: LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
threatsignal/docs/: index.md
threatsignal/examples/: list_threats.py  run_workflow.py
threatsignal/tests/: test_crowdstrike.py  test_incident_workflow.py  test_palo_alto.py  test_sentinelone.py
threatsignal/threatsignal/: __init__.py
threatsignal/threatsignal/integrations/: __init__.py
threatsignal/threatsignal/integrations/edr/: __init__.py  base.py  crowdstrike.py  sentinelone.py
threatsignal/threatsignal/integrations/firewall/: __init__.py  base.py  cisco_asa.py  palo_alto.py
threatsignal/threatsignal/response/: __init__.py  incident_workflow.py
threatsignal/threatsignal/utils/: __init__.py  logging.py  time_utils.py
