[project]
name = "threatsignal"
version = "0.1.0"
description = "Open-source security automation & incident response framework"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"},
]
keywords = ["security", "automation", "incident-response", "edr", "firewall"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Security",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "requests>=2.31.0",
    "asyncio-mqtt>=0.13.0",
    "aiohttp>=3.8.5",
    "psycopg2-binary>=2.9.7",
    "redis>=5.0.1",
    "cryptography>=41.0.4",
    "python-dotenv>=1.0.0",
    "pyyaml>=6.0.1",
    "psutil>=5.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.1",
    "black>=23.7.0",
    "flake8>=6.0.0",
]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["threatsignal*"]